# WebScraping_SofaScore

./: .gitignore  Postman  Python  README.md  pyproject.toml
querys/: inicio.sql  pbi.pbix  vi_table_per_round.sql
src/functions/: f001_get_sports.py  f002_get_countries.py  f003_get_tournaments.py  f004_get_seasons.py  f005_get_rounds.py  f006_get_matches.py  f007_get_matches_statistics.py  f008_get_lineups.py  f009_get_lineups_statistics.py
src/pipeline/: p000_extract_match.py  p001_extract_seasons_matches.py  p001_get_sports.py  p002_get_countries.py  p003_get_tournaments.py  p004_get_seasons.py  p005_get_rounds.py  p006_get_matches.py  p007_get_matches_statistics.py  p008_get_lineups.py  p009_get_lineups_statistics.py
src/pipeline/p001_extract/: e001_extract_complete.py  e002_extract_match.py  e003_extract_seasons_matches.py
src/pipeline/p001_extract/utils/: u001_get_sports.py  u002_get_countries.py  u003_get_tournaments.py  u004_get_seasons.py  u005_get_rounds.py  u006_get_matches.py  u007_get_matches_statistics.py  u008_get_lineups.py  u009_get_lineups_statistics.py
src/pipeline/p002_load_bronze/: l001_create_postgres_bronze.py  l002_load_postgres_bronze.py
src/pipeline/p002_load_bronze/utils/: u001_update_postgres_bronze.py
src/pipeline/p003_load_silver/: l001_create_postgres_silver.py  l002_load_postgres_silver.py
src/pipeline/p003_load_silver/utils/: u001_update_postgres_silver.py
src/scrapers/: sofascore_scraper.py
src/utils/: create_engine_postgres.py  save_dataframe_csv.py  save_response_json.py
