[tool.poetry]
name = "WebScraping_SofaScore"
version = "0.1.0"
description = ""
authors = ["Gabriel-albuq <gabriel.albuquerque05@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
requests = "^2.32.3"
curl-cffi = "^0.10.0"
brotli = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"